# day-dash

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  combine_compile_commands.py
.github/workflows/: ci.yaml
include/: CMakeLists.txt
include/day_dash_lib/: tasks.hpp
src/: CMakeLists.txt
src/day_dash_lib/: tasks.cpp
tests/: CMakeLists.txt  test_tasks.cpp
